--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -19,9 +19,9 @@
         <td><%= teaching_module.code_apogee %></td>
         <td><%= teaching_module.label %></td>
         <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user).round %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm) %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td) %></td>
-        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp) %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_cm).round %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_td).round %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, @user, :teacher_hours_tp).round %></td>
       </tr>
     <% end %>
   </tbody>
