--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -95,7 +95,10 @@
     <tr>
       <th>Code</th>
       <th>Module</th>
-      <th width="140">Total (CM/TD/TP)</th>
+      <th>Total heures enseignant</th>
+      <th>CM</th>
+      <th>TD</th>
+      <th>TP</th>
     </tr>
   </thead>
   <tbody>
@@ -103,11 +106,10 @@
       <tr>
         <td><%= teaching_module.code %></td>
         <td><%= teaching_module.label %></td>
-        <td>
-          <%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user).round %>
-          (<%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_cm).round %> /
-          <%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_td).round %> /
-          <%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_tp).round %>)
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user).round %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_cm).round %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_td).round %></td>
+        <td><%= @year.planned_hours_for_teaching_module_and_user(teaching_module, current_user, :teacher_hours_tp).round %></td>
         </td>
       </tr>
     <% end %>
