--- a/app/views/years/projects/_form.html.erb
+++ b/app/views/years/projects/_form.html.erb
@@ -3,6 +3,7 @@
     <div class="row">
       <div class="col-md-4">
         <%= f.input :label %>
+        <%= f.input :sublabel %>
         <%= f.input :year_id, as: :hidden %>
         <%= f.input :user, label: 'Responsable' %>
         <%= f.input :description, input_html: { rows: 5 } %>
