evaluation feedback in discuss

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -3,6 +3,8 @@
 @import font-awesome
 @import devise_bootstrap_views
 @import timeline/timeline
+@import glyphicons
+@import star-rating/star-rating.min
 
 *
   font-family: sans-serif
