--- a/app/views/discuss/project.html.erb
+++ b/app/views/discuss/project.html.erb
@@ -37,6 +37,8 @@
   </div>
 </div>
 
+<%= render 'years/projects/evaluation', project: @project %>
+
 <hr>
 <h4>Intervenants planifiés</h4>
 <p>Les heures sont des heures du point de vue de l'étudiant. Le cours magistral (CM) est un cours dispensé à toute la promotion en même temps (50 étudiants). Les travaux dirigés (TD) sont des cours donnés par demi-groupe. Les travaux pratiques (TP) sont des cours en 1/3 de groupe. Un TD de 2 heures assuré pour 1 seul groupe compte comme 1 heure, parce que la moitié de la promotion a 0 heures de cours, et l'autre moitié 2 heures. Dans ce cas, une autre personne assurera 2 heures de TD pour l'autre groupe, ce qui ramènera le total à 2 heures.</p>
