better promotion view

--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -4,205 +4,6 @@
   Cette promotion est en première année en <%= link_to @promotion.first_year, @promotion.first_year %>, et en seconde année en <%= link_to @promotion.second_year, @promotion.second_year %>.<br>
 </p>
 
-<div id='timeline' style="width: 100%; height: 600px"></div>
-<script type="text/javascript">
-  var data = <%= { events: @promotion.projects.collect(&:to_event) }.to_json.html_safe %>;
-  var config = { language: 'fr', initial_zoom: 1 };
-  new TL.Timeline('timeline', data, config);
-</script>
-
-<% @semesters.each do |semester| %>
-  <h2><%= link_to semester, semester %></h2>
-  
-  <h3>Projets</h3>
-  <%
-  projects = @promotion.projects_in(semester).sort_by(&:week_number)
-  %>
-  <table class="timeline table table-hover">
-    <thead>
-      <tr>
-        <th>Semaine</th>
-        <% projects.each do |project| %>
-          <th><%= project.week_number %></td>
-        <% end %>
-      </tr>
-      <tr>
-        <th>Jour de début</th>
-        <% projects.each do |project| %>
-          <th><%= project.start_date.strftime '%d/%m/%y' %></td>
-        <% end %>
-      </tr>
-    </thead>
-    <tbody>
-      <% projects.each do |project| %>
-        <tr>
-          <td><%= link_to project, [project.year, project] %></td>
-          <% projects.each do |p| %>
-            <% if project == p %>
-              <td class="active">
-                <%= link_to [project.year, project] do %>
-                  <span><%= project.week_number %></span>
-                <% end %>
-              </td>
-            <% else %>
-              <td></td>
-            <% end %>
-          <% end %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <h3>Heures</h3>
-  <p>
-    <%= semester.expected_student_hours.round %> PPN /
-    <%= @promotion.involvements.in_semester(semester).sum(:student_hours).round %> maquette / 
-    <%= @promotion.events.in_semester(semester).sum(:student_hours).round %> EDT
-  </p>
-  <p>En heures étudiant, sous la forme "Heures totales (heures CM / heures TD / heures TP)</p>
-
-  <div id="semester-<%= semester.id %>"></div></td>
-  <script type="text/javascript">
-    $(function () {
-      $('#semester-<%= semester.id %>').highcharts({
-          chart: { type: 'bar', height: 150 },
-          title: null,
-          xAxis: { categories: ['PPN', 'Planifié', 'EDT'], tickWidth: 0 },
-          yAxis: { min: 0, title: null },
-          tooltip: { backgroundColor: 'white', valueSuffix: ' heures' },
-          plotOptions: { series: { stacking: 'normal', dataLabels: { enabled: false } } },
-          legend: { enabled: false },
-          credits: { enabled: false },
-          series: [
-            { 
-              name: 'TP', 
-              data: [
-                <%= semester.student_hours_tp %>, 
-                <%= @promotion.involvements.in_semester(semester).sum(:student_hours_tp) %>,
-                <%= @promotion.events.tp.in_semester(semester).sum(:student_hours) %>
-                ]
-              }, 
-            { 
-              name: 'TD', 
-              data: [
-                <%= semester.student_hours_td %>, 
-                <%= @promotion.involvements.in_semester(semester).sum(:student_hours_td) %>,
-                <%= @promotion.events.td.in_semester(semester).sum(:student_hours) %>
-                ] 
-              }, 
-            { 
-              name: 'CM', 
-              data: [
-                <%= semester.student_hours_cm %>, 
-                <%= @promotion.involvements.in_semester(semester).sum(:student_hours_cm) %>,
-                <%= @promotion.events.cm.in_semester(semester).sum(:student_hours) %>
-              ] 
-            }
-            ]
-      });
-  });
-  </script>
-
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>PPN</th>
-        <th>Maquette</th>
-        <th>PPN vs Maquette</th>
-        <th>EDT</th>
-        <th>Maquette vs EDT</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% semester.teaching_modules.each do |teaching_module| %>
-        <% 
-        program = teaching_module.expected_student_hours.round
-        planned = @promotion.involvements.where(teaching_module: teaching_module).sum(:student_hours).round
-        scheduled = @promotion.events.where(teaching_module: teaching_module).sum(:student_hours).round
-        %>
-        <tr>
-          <td><%= link_to teaching_module.full_name, teaching_module %></td>
-          <td>
-            <%= program %>
-            (<%= teaching_module.hours_cm %> /
-            <%= teaching_module.hours_td %> /
-            <%= teaching_module.hours_tp %>)
-          </td>
-          <td>
-            <%= planned %>
-            (<%= @promotion.involvements.where(teaching_module: teaching_module).sum(:student_hours_cm).round %> /
-            <%= @promotion.involvements.where(teaching_module: teaching_module).sum(:student_hours_td).round %> /
-            <%= @promotion.involvements.where(teaching_module: teaching_module).sum(:student_hours_tp).round %>)
-          </td>
-          <%= render 'application/td_delta', value: planned, reference: program %>
-          <td>
-            <%= scheduled %>
-            (<%= @promotion.events.cm.where(teaching_module: teaching_module).sum(:student_hours).round %> /
-            <%= @promotion.events.td.where(teaching_module: teaching_module).sum(:student_hours).round %> /
-            <%= @promotion.events.tp.where(teaching_module: teaching_module).sum(:student_hours).round %>)
-            </td>
-          <%= render 'application/td_delta', value: scheduled, reference: planned %>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% end %>
-
-<h2>Evénements Google Calendar bruts</h2>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Cours</th>
-      <th>Description</th>
-      <th>Personnes</th>
-      <th>Date</th>
-      <th>Heures</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @promotion.calendar_events.each do |event| %>
-      <tr>
-        <td><%= event.summary %></td>
-        <td><%= event.description %></td>
-        <td><%= raw event.attendee.map { |attendee| attendee.to_s.remove('mailto:') }.join '<br>' %></td>
-        <td><%= event.dtstart.strftime "%d/%m/%Y" %></td>
-        <td><%= (event.dtend - event.dtstart) / 60 / 60 %></td>
-      </tr>
-    <% end unless @promotion.calendar_events.nil? %>
-  </tbody>
-</table>
-
-<h2>Evénements Google Calendar importés</h2>
-
-<table class="table">
-  <thead>
-    <tr>
-      <th>Module</th>
-      <th>Date</th>
-      <th>Type</th>
-      <th>Heures</th>
-      <th>Heures étudiants</th>
-      <th>Heures enseignant</th>
-      <th>Personnes</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @promotion.events.each do |event| %>
-      <tr>
-        <td><%= event.teaching_module %></td>
-        <td><%= event.date.strftime "%d/%m/%Y" %></td>
-        <td><%= event.kind.to_s.upcase %></td>
-        <td><%= event.duration %></td>
-        <td><%= event.student_hours %></td>
-        <td><%= event.teacher_hours %></td>
-        <td>
-          <% event.users.each do |user| %>
-            <%= link_to user, user %><br>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= link_to 'Projets', promotion_projects_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
+<%= link_to 'Modules', promotion_teaching_modules_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
+<%= link_to 'Synchroniser avec Google', promotion_sync_path(promotion_id: @promotion.id), class: 'btn btn-default btn-lg' %>
