--- a/app/views/promotions/sync.html.erb
+++ b/app/views/promotions/sync.html.erb
@@ -45,8 +45,8 @@
         <td><%= event.date.strftime "%d/%m/%Y" %></td>
         <td><%= event.kind.to_s.upcase %></td>
         <td><%= event.duration %></td>
-        <td><%= event.student_hours#.round 2 %></td>
-        <td><%= event.teacher_hours#.round 2 %></td>
+        <td><%= number_to_human event.student_hours %></td>
+        <td><%= number_to_human event.teacher_hours %></td>
         <td>
           <% event.users.each do |user| %>
             <%= link_to user, user %><br>
