events on module

--- a/app/views/years/teaching_modules/show.html.erb
+++ b/app/views/years/teaching_modules/show.html.erb
@@ -103,6 +103,7 @@
     <tr>
       <th>Date</th>
       <th>Type</th>
+      <th>Projet</th>
       <th>Heures</th>
       <th>Heures étudiants</th>
       <th>Heures enseignant</th>
@@ -114,6 +115,7 @@
       <tr>
         <td><%= event.date.strftime "%d/%m/%Y" %></td>
         <td><%= event.kind.to_s.upcase %></td>
+        <td><%= event.project %></td>
         <td><%= number_to_human event.duration %></td>
         <td><%= number_to_human event.student_hours %></td>
         <td><%= number_to_human event.teacher_hours %></td>
